MDEV-23656 view: removal of parentheses results in wrong result

Item_ref should have the precedence of the item it's referencing